[package]
name = "marketplace-solver"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-compatibility-layer = { version = "1.1", default-features = false, features = [
    "logging-utils",
] }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
futures = "0.3"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.61" }
hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "rc-0.1.32" }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.61" }
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8"
surf-disco = "0.9"
tide-disco = "0.9"
toml = "0.8.14"
tracing = "0.1"
vbs = "0.1"

