[package]
name = "marketplace-solver"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[features]
testing = [
	"hotshot-query-service",
	"portpicker",
	
]

[dependencies]
anyhow = "1"
async-compatibility-layer = { version = "1.1", default-features = false, features = [
    "logging-utils",
] }
async-std = { version = "1.9.0" }
async-trait = "0.1"
bincode = "1.3"
clap = { version = "4.4", features = ["derive", "env"] }
cld = "0.5"
committable = "0.2"
espresso-types = { git = "https://github.com/EspressoSystems/espresso-sequencer.git", branch = "main", features = [ "testing" ] }
futures = "0.3"
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.64" }
hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "rc-0.1.35" }
hotshot-query-service = { git = "https://github.com/EspressoSystems/hotshot-query-service", tag = "rc-0.1.47", optional = true }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.64" }
jf-signature = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
  "std",
] }
portpicker = { version = "0.1", optional = true } 
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [ "postgres", "macros" ] }
surf-disco = "0.9"
thiserror = "1.0"
tide-disco = "0.9"
toml = "0.8.14"
tracing = "0.1"
vbs = "0.1"

[dev-dependencies]
portpicker = { version = "0.1" }
